# ChessRobot

./: README.md
ChessRobotAndroidApplication/app/: build.gradle
ChessRobotAndroidApplication/app/src/androidTest/java/ru/nt202/chessrobotandroidapplication/: ExampleInstrumentedTest.java
ChessRobotAndroidApplication/app/src/main/: AndroidManifest.xml
ChessRobotAndroidApplication/app/src/main/java/ru/nt202/chessrobotandroidapplication/cameratasks/: StreamOffTask.java  StreamOnTask.java
ChessRobotAndroidApplication/app/src/main/java/ru/nt202/chessrobotandroidapplication/logic/: AnalyserTask.java  BoardDrawerTask.java  BoardHandler.java  ButtonsLockerTask.java  Constants.java  GameHandler.java  Stockfish.java  VoiceTask.java
ChessRobotAndroidApplication/app/src/main/res/drawable/: blue_progress.xml
ChessRobotAndroidApplication/app/src/main/res/layout/: activity_calibration.xml  activity_init.xml  activity_main.xml  activity_manual.xml  activity_settings.xml  activity_temp.xml
ChessRobotAndroidApplication/app/src/main/res/menu/: navigation.xml
ChessRobotAndroidApplication/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
ChessRobotAndroidApplication/app/src/test/java/ru/nt202/chessrobotandroidapplication/: ExampleUnitTest.java
ChessRobotAndroidApplication/decoder/: CMakeLists.txt  build.gradle
ChessRobotAndroidApplication/decoder/src/androidTest/java/ru/nt202/decoder/: ExampleInstrumentedTest.java
ChessRobotAndroidApplication/decoder/src/main/: AndroidManifest.xml
ChessRobotAndroidApplication/decoder/src/main/cpp/: MoveDetector.c
ChessRobotAndroidApplication/decoder/src/main/java/ru/nt202/decoder/: MoveDetection.java
ChessRobotAndroidApplication/decoder/src/main/jni/: decoder.c
ChessRobotAndroidApplication/decoder/src/test/java/ru/nt202/decoder/: ExampleUnitTest.java
ChessRobotAndroidApplication/gradle/wrapper/: gradle-wrapper.properties
ChessRobotWebServer/: .gitignore  pom.xml
ChessRobotWebServer/src/main/java/ru/nt202/chessrobotwebserver/dl4j/: Classification.java  Serialization.java
ChessRobotWebServer/src/main/java/ru/nt202/chessrobotwebserver/imageprocessing/: BoardCoordinates.java  BoardHomographCropper.java  CornersFinder.java  DistortionRectifier.java  FacadeImageProcessing.java  SquaresCropper.java
ChessRobotWebServer/src/main/java/ru/nt202/chessrobotwebserver/main/: Main.java
ChessRobotWebServer/src/main/java/ru/nt202/chessrobotwebserver/servlets/: ClassificationServlet.java  MainPageServlet.java
ChessRobotWebServer/src/main/resources/: page.html
TransferLearninForGoogLeNet/: .gitignore  pom.xml
TransferLearninForGoogLeNet/src/main/java/ru/nt202/transferlearningforgooglenet/: TransferLearningForGoogLeNet.java
(+11 files in other folders)
